Fix FF overflow list-item right-content/primaryCurrency wrapper (#9591)
Over flow .list-item__right-content rather than the text.

--- a/ui/app/components/ui/list-item/index.scss
+++ b/ui/app/components/ui/list-item/index.scss
@@ -85,6 +85,8 @@
     grid-area: right;
     text-align: right;
     align-items: flex-end;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   @media (max-width: 575px) {
